--- a/4afab02559918b31ba5344b431c329b9ed4e6bda/base/styles/style.css
+++ b/4afab02559918b31ba5344b431c329b9ed4e6bda/base/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
 body,
 html {
@@ -38,6 +39,7 @@ body {
 }
 .powered .logo {
   width: 80px;
+  filter: url(#filter);
 }
 .sidebar h1 {
   font-size: 14px;
@@ -59,10 +61,6 @@ body {
 .sidebar ul li a:hover {
   text-decoration: none;
 }
-.sidebar ul li a.done {
-  color: #7fb069;
-  display: block;
-}
 .bannernav {
     width: 100%;
 }
@@ -71,62 +69,57 @@ body {
     flex-flow: column nowrap;
     align-items: flex-start;
 }
-.iframe {
+.ad {
     display: flex;
     flex: 1;
     height: 100%;
     justify-content: center;
     align-items: center;
+    flex-flow: column nowrap;
+    gap: 10px;
 }
-.iframe iframe {
+.ad iframe {
   border: 0;
   height: 100%;
   width: 100%;
 }
-.loading {
-    position: absolute;
-    top: 50%;
-    left: calc(50% + 150px); /* account for sidebar */
-    transform: translate(-50%, -50%);
+.ad .ad__controls {
+    display: flex;
+    gap: 10px;
 }
-.spinner {
-  width: 40px;
-  height: 40px;
-
-  position: relative;
-  margin: 100px auto;
+.ad .ad__controls .ad__control {
+    all: unset;
+    background: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: #414141;
+    cursor: pointer;
+    font-size: 12px;
+    padding: 5px 10px;
 }
-
-.double-bounce1, .double-bounce2 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #000;
-  opacity: .5;
-  position: absolute;
-  top: 0;
-  left: 0;
-  
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-  animation: sk-bounce 2.0s infinite ease-in-out;
+.ad__control i {
+  pointer-events: none;
 }
-
-.double-bounce2 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
+.ad .adblock-message {
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #fcfcfc;
+    color: #414141;
+    width: 300px;
+    height: 250px;
+    font-size: 12px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
-
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
+.ad .adblock-message h1 {
+    font-size: 33px;
+    text-transform: uppercase;
+    margin: 0;
 }
-
-@keyframes sk-bounce {
-  0%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-  }
+.ad .adblock-message h2 {
+    font-size: 18px;
+    margin: 5px 0;
 }
