--- a/4afab02559918b31ba5344b431c329b9ed4e6bda/base/styles/style.css
+++ b/4afab02559918b31ba5344b431c329b9ed4e6bda/base/styles/style.css
@@ -130,17 +130,13 @@ body {
     margin: 5px 0;
 }
 .tooltip {
-  background: #333;
   color: #fff;
   padding: 8px 12px;
-  border-radius: 12px;
-  font-size: 14px;
-  font-weight: 500;
-  white-space: nowrap;
-  
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  border-radius: 8px;
+  font-size: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,.15);
   background: linear-gradient(135deg, #6a5acd, #ff69b4);
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
 }
 
